fix up checkbox alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,15 +75,26 @@ form.formtastic {
     font-weight: bold;
 }
 
-ul.read_only_check_boxes {
-    list-style-type: none;
-    padding-left: 0px;
+.read_only_check_boxes {
+    width: 100%;
 }
 
-ul.read_only_check_boxes li span {
+.check_box {
+    /* background-color: lightgrey;
+    border: solid lightgray 1px;
+    padding: 3px;
+    */
+}
+
+.check_box_content {
     float: left;
-    width: 20px;
+    width: 5%;
     font-weight: bold;
+}
+
+.check_box_title {
+    float: left;
+    width: 95%;
 }
 
 form.formtastic p.bylaws_link {
